--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,7 @@ header {
     font-size: 50px;
     text-align: center;
     position: relative;
+    margin-left: calc((50% - 250px));
     display: block;
     width: 450px;    
 }
